--- a/reports/potting_report_actions.xml
+++ b/reports/potting_report_actions.xml
@@ -33,4 +33,15 @@
         <field name="report_file">potting_management.report_potting_daily</field>
         <field name="print_report_name">'Rapport_Journalier_%s' % (context_timestamp(datetime.datetime.now()).strftime('%%Y%%m%%d'))</field>
     </record>
+
+    <!-- OT Daily Report Action (nouveau rapport pour DG) -->
+    <record id="action_report_ot_daily" model="ir.actions.report">
+        <field name="name">OT Daily Report</field>
+        <field name="model">potting.daily.report.wizard</field>
+        <field name="report_type">qweb-pdf</field>
+        <field name="report_name">potting_management.report_ot_daily</field>
+        <field name="report_file">potting_management.report_ot_daily</field>
+        <field name="print_report_name">'OT_Daily_Report_%s' % (object.report_date)</field>
+        <field name="paperformat_id" ref="base.paperformat_euro"/>
+    </record>
 </odoo>
