--- a/views/potting_transit_order_views.xml
+++ b/views/potting_transit_order_views.xml
@@ -13,6 +13,7 @@
                   multi_edit="1"
                   sample="1">
                 <field name="name" decoration-bf="1"/>
+                <field name="ot_reference" optional="show"/>
                 <field name="company_id" column_invisible="1"/>
                 <field name="customer_order_id" optional="show"/>
                 <field name="campaign_period" optional="show"/>
@@ -72,6 +73,10 @@
                         <h1>
                             <field name="name" class="text-primary" readonly="1"/>
                         </h1>
+                        <label for="ot_reference" string="Référence OT"/>
+                        <h2>
+                            <field name="ot_reference" placeholder="Ex: OT10532"/>
+                        </h2>
                     </div>
                     <group>
                         <group string="📋 Informations générales">
@@ -202,6 +207,7 @@
         <field name="arch" type="xml">
             <search string="Rechercher OT">
                 <field name="name"/>
+                <field name="ot_reference"/>
                 <field name="customer_order_id"/>
                 <field name="customer_id"/>
                 <field name="consignee_id"/>
