--- a/reports/potting_report_actions.xml
+++ b/reports/potting_report_actions.xml
@@ -1,5 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
+    <!-- Format de papier paysage A4 pour le rapport OT Daily -->
+    <record id="paperformat_ot_daily_landscape" model="report.paperformat">
+        <field name="name">OT Daily Report - A4 Paysage</field>
+        <field name="default" eval="False"/>
+        <field name="format">A4</field>
+        <field name="orientation">Landscape</field>
+        <field name="margin_top">10</field>
+        <field name="margin_bottom">10</field>
+        <field name="margin_left">7</field>
+        <field name="margin_right">7</field>
+        <field name="header_line" eval="False"/>
+        <field name="header_spacing">5</field>
+        <field name="dpi">90</field>
+    </record>
+
     <!-- Transit Order Report Action -->
     <record id="action_report_potting_transit_order" model="ir.actions.report">
         <field name="name">Rapport OT</field>
@@ -42,6 +57,6 @@
         <field name="report_name">potting_management.report_ot_daily</field>
         <field name="report_file">potting_management.report_ot_daily</field>
         <field name="print_report_name">'OT_Daily_Report_%s' % (object.report_date)</field>
-        <field name="paperformat_id" ref="base.paperformat_euro"/>
+        <field name="paperformat_id" ref="paperformat_ot_daily_landscape"/>
     </record>
 </odoo>
