--- a/views/potting_menu_views.xml
+++ b/views/potting_menu_views.xml
@@ -74,6 +74,13 @@
               sequence="40"
               groups="potting_management.group_potting_user"/>
 
+    <menuitem id="menu_potting_delivery_note" 
+              name="📄 Bons de Livraison" 
+              parent="menu_potting_operations" 
+              action="action_potting_delivery_note" 
+              sequence="45"
+              groups="potting_management.group_potting_user"/>
+
     <menuitem id="menu_potting_production_line" 
               name="🏭 Productions" 
               parent="menu_potting_operations" 
